--- a/titlepage-famaf.tex
+++ b/titlepage-famaf.tex
@@ -31,7 +31,7 @@ Tribunal especial (titulares y suplentes):
 \end{center}
 
 \begin{center}
-Mejoras en la eficiencia de Generaci\'on Exahustiva Acotada © 2024 por \href{https://mpolitano.github.io}{Mariano Politano} se distribuye bajo licencia \href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{CC BY-NC-SA 4.0} 
+Generación eficiente de entradas exhaustivas acotadas basada en la API sin la necesidad de especificaciones © 2024 por \href{https://mpolitano.github.io}{Mariano Politano} se distribuye bajo licencia \href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{CC BY-NC-SA 4.0} 
 \end{center}
 
 \end{titlepage} 
